--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
         <div class="content">
             <div class="indications">
-                <h1 class="indications-h1">¡Prepara tu mensaje! para +521 <span id="out_number">5501261874</span></h1>
+                <h1 class="indications-h1">¡Prepara tu mensaje! para +521 <span id="on"></span></h1>
             </div>
             <div class="button">
                 <button id="bs" class="btn-send">¡Listo! Enviar ❤️</button>
