--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </div>
     </div>
-    <script src="js/scripts.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
