cambio de titulo y diseño

--- a/index.html
+++ b/index.html
@@ -28,16 +28,19 @@
     <div class="container">
         <div class="content">
             <div class="indications">
-                <h1 class="indications-h1">¡Prepara tu mensaje! para +521 <span id="on"></span></h1>
+                <h1 class="indications-h1">¡Ya no lo agregues a contactos!, envia un WhatsApp directo. <span
+                        id="on"></span>
+                </h1>
             </div>
             <div class="button">
-                <button id="bs" class="btn-send">¡Listo! Enviar ❤️</button>
+                <button id="bs" class="btn-send">¡Listo! Enviar</button>
             </div>
             <div class="message mb-2">
                 <input type="text" name="in" id="in" class="input-msg" placeholder="# Ingresa el numero" maxlength="10">
             </div>
             <div class="message">
-                <input type="text" name="m" id="m" class="input-msg" placeholder="Escribe tu mensaje..." maxlength="500">
+                <input type="text" name="m" id="m" class="input-msg" placeholder="Escribe tu mensaje..."
+                    maxlength="500">
             </div>
             <hr>
             <div class="indications">
