--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fast WhatsApp</title>
     <link rel="shortcut icon" href="multimedia/icons/whatsapp2.svg" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css?v=1.0.1">
+    <link rel="stylesheet" href="css/style.css?v=1.0.3">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-P40ETZ5MKF"></script>
     <script>
@@ -41,34 +41,23 @@
                         id="on"></span>
                 </h1>
             </div>
-            <div class="button">
-                <button id="bs" class="btn-send">¡Listo! Enviar</button>
-            </div>
-            <div class="message mb-2">
-                <input type="text" name="in" id="in" class="input-msg" placeholder="# Ingresa el número" maxlength="10">
+            <div class="box-message mb-2">
+                <input type="number" name="in" id="in" class="input-msg" placeholder="# Ingresa el número">
+                <button id="bs" class="btn-img">
+                    <img src="/multimedia/icons/send.svg" alt="" width="24" height="24">
+                </button>
             </div>
             <div class="message">
                 <input type="text" name="m" id="m" class="input-msg" placeholder="Escribe tu mensaje..."
                     maxlength="500">
             </div>
             <hr>
-
-            <script async
-                src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4811375905347887"
-                crossorigin="anonymous"></script>
-            <!-- Whats -->
-            <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-4811375905347887"
-                data-ad-slot="6204397806" data-ad-format="auto" data-full-width-responsive="true"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-
             <div class="indications">
                 <p class="indications-p">¿Más fácil no?</p>
             </div>
         </div>
     </div>
-    <script src="js/script.js?v=1.0.1"></script>
+    <script src="js/script.js?v=1.0.3"></script>
 </body>
 
 </html>
