change url img send

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="box-message mb-2">
                 <input type="number" name="in" id="in" class="input-msg" placeholder="# Ingresa el número">
                 <button id="bs" class="btn-img">
-                    <img src="/multimedia/icons/send.svg" alt="" width="24" height="24">
+                    <img src="/whats/multimedia/icons/send.svg" alt="" width="24" height="24">
                 </button>
             </div>
             <div class="message">
